<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceGroup
    xmlns:camera="http://schemas.android.com/apk/res-auto">

    <com.liany.clientmodel.widget.myCamera.data.CamListPreference
        camera:key="com.liany.clientmodel.widget.myCamera.module.VideoModule"
        camera:title="@string/mode_video"/>

    <com.liany.clientmodel.widget.myCamera.data.CamListPreference
        camera:key="com.liany.clientmodel.widget.myCamera.module.PhotoModule"
        camera:title="@string/mode_photo"/>

    <com.liany.clientmodel.widget.myCamera.data.CamListPreference
        camera:key="com.liany.clientmodel.widget.myCamera.module.ProfessionalModule"
        camera:title="@string/mode_professional"/>

    <com.liany.clientmodel.widget.myCamera.data.CamListPreference
        camera:key="com.liany.clientmodel.widget.myCamera.module.DualCameraModule"
        camera:title="@string/mode_dual_camera"/>
</PreferenceGroup>