<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="314dp"
              android:layout_height="wrap_content"
            >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt"
            android:textColor="#ffffff"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">

        <com.liany.csiclient.widget.MaxHeightScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dialog_msg"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"/>
        </com.liany.csiclient.widget.MaxHeightScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:visibility="visible"
                android:id="@+id/dialog_compare"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="事主排查"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:background="@drawable/bg_btn_blue_light"/>

            <Button
                android:visibility="visible"
                android:id="@+id/dialog_edit"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="修改"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:background="@drawable/bg_button_edit"/>

            <Button
                android:id="@+id/dialog_confirm"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:text="@string/confirm"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:background="@drawable/bg_button_confirm"/>

            <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cancel"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:background="@drawable/bg_button_cancel"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>