<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <!--android:background="@mipmap/locked_background">-->



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/apppage3_02"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:background="@mipmap/icon"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal"
                 android:background="@drawable/bg_edittext_login">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:src="@mipmap/icon_username"
                    android:layout_marginLeft="30dp"/>
                <EditText
                    android:id="@+id/et_login_user"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:hint="@string/prompt_user"
                    android:textColor="#29175b"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_color"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_edittext_login" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:src="@mipmap/icon_password"
                    android:layout_marginLeft="30dp"/>

                <EditText
                    android:id="@+id/et_login_password"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:hint="@string/prompt_password"
                    android:textColor="#29175b"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_color"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_login_signin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:background="@drawable/bg_button_login"
                />

            <Button
                android:id="@+id/btn_login_ip"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:text="修改地址"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:background="@drawable/bg_button_login"
                />

        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_login_scan"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@mipmap/scan"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="visible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/logo_ly"
                android:visibility="visible" />
            <TextView
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/company_name"
                android:textColor="@color/graytext"
                android:textSize="14sp" />

        </LinearLayout>
        <TextView
            android:id="@+id/tv_login_version"
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#FFB0ACAB"
            android:textSize="14sp"
            />

    </LinearLayout>
</RelativeLayout>
